--- a/packages/eslint-config-server/package.json
+++ b/packages/eslint-config-server/package.json
@@ -2,5 +2,8 @@
   "name": "eslint-config-server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
