--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,5 +2,19 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0",
+    "eslint-config-custom-server": "*"
+  },
+  "scripts": {
+    "dev": "node --watch index.js"
+  }
 }
