--- a/packages/eslint-config-server/package.json
+++ b/packages/eslint-config-server/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "eslint-config-google": "^0.14.0"
   }
 }
